--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,52 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/materialize.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Image Shrink</title>
   </head>
   <body>
-    <h1>shrink</h1>
+    <div class="container center-align">
+      <h3><i class="fas fa-images"></i>Image Shrink</h3>
+      <p>Choose an image to resize</p>
+      <form id="image-form">
+        <div class="file-field input-field">
+          <div class="btn">
+            <span>Browse</span>
+            <input type="file" id="img">
+          </div>
+
+          <div class="file-path-wrapper">
+            <input type="text" class="file-path validate" placeholder="Upload file">
+          </div>
+        </div>
+
+        <p>
+          <strong>Size:</strong>
+          <em>The lower the size, the smaller the resulting file size</em>
+        </p>
+        <p class="range-field">
+          <input type="range" min="0" max="100" id="slider">
+        </p>
+
+        <input type="submit" class="btn black" value="Resize">
+      </form>
+
+      <div class="card output">
+        <div class="card-content">
+          Ouput Path: <span id="output-path"></span>
+        </div>
+      </div>
+    </div>
+
+    <script src="js/materialize.min.js"></script>
+    <script>
+      const path = require('path');
+      const os = require('os');
+
+      // update this later to allow user to select output path
+      document.querySelector('#output-path').innerText = path.join(os.homedir(), 'imageshrink');
+    </script>
   </body>
 </html>
