added resizing functionality; app works

--- a/app/index.html
+++ b/app/index.html
@@ -46,9 +46,32 @@
     <script>
       const path = require('path');
       const os = require('os');
+      const { ipcRenderer } = require('electron');
+
+      const form = document.querySelector('#image-form');
+      const slider = document.querySelector('#slider');
+      const img = document.querySelector('#img');
 
       // update this later to allow user to select output path
       document.querySelector('#output-path').innerText = path.join(os.homedir(), 'imageshrink');
+
+      // On submit
+      form.addEventListener('submit', e => {
+        e.preventDefault();
+
+        const imgPath = img.files[0].path;
+        const quality = slider.value;
+
+        ipcRenderer.send('image:shrink', { imgPath, quality });
+      });
+
+      // On done
+      ipcRenderer.on('image:done', () => {
+        M.toast({
+          html: `Image resized to ${slider.value}% quality`,
+          displayLength: 8000
+        });
+      });
     </script>
   </body>
 </html>
