--- a/app/about.html
+++ b/app/about.html
@@ -11,7 +11,8 @@
   <body>
     <div class="container about center-align">
       <h4>
-        <i class="fas fa-images"></i> Image Shrink
+        <i class="fas fa-images"></i>
+        Image Shrink
       </h4>
       <ul class="collection">
         <li class="collection-item">Developer: Jake Yukich</li>
