--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 
         <p>
           <strong>Size:</strong>
-          <em>The lower the size, the smaller the resulting file size</em>
+          <em>Adjust slider for desired scaling</em>
         </p>
         <p class="range-field">
           <input type="range" min="0" max="100" id="slider">
