--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
           <input type="range" min="0" max="100" id="slider">
         </p>
 
-        <input type="submit" class="btn black" value="Resize">
+        <input type="submit" class="btn black" value="Resize 50%" id="resize">
       </form>
 
       <div class="card output">
@@ -56,6 +56,7 @@
       const img = document.getElementById('img');
       const directory = document.getElementById('directory');
 
+      // default output path
       document.getElementById('output-path').innerText = path.join(os.homedir(), 'imageshrink');
 
       // On change destination
@@ -68,6 +69,11 @@
         if (!canceled) {
           document.getElementById('output-path').innerText = filePaths[0];
         }
+      });
+
+      // On slider update
+      slider.addEventListener('change', () => {
+        document.getElementById('resize').value = `Resize ${slider.value}%`;
       });
 
       // On submit
